[package]
name = "kite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy_egui = "0.27.0"
bevy-inspector-egui = "0.24.0"
#bevy_xpbd_2d = "0.2"0.13.20.13.2

[dependencies.bevy]
version = "0.13"
default-features = true
features = ["flac", "jpeg", "wayland"]

[dependencies.bevy_asset_loader]
version = "0.20"
features = ["2d", "progress_tracking", "standard_dynamic_assets"]