[package]
name = "kite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy_egui = "0.28.0"
bevy-inspector-egui = "0.25.0"
#bevy_flurx_wry = "0.1.0-alpha1"

[dependencies.bevy]
version = "0.14.0"
default-features = true
features = ["flac", "jpeg", "wayland"]

[dependencies.bevy_asset_loader]
version = "0.21.0"
features = ["2d", "progress_tracking", "standard_dynamic_assets"]
